--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,17 @@ font-weight: bold;
 border-radius: .5rem;
 width: 90%;
 text-align: center;
+border: none;
 }
 
 @media (min-width: 480px) {
     .boton {
         width: auto;
     }
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 .sombra{
@@ -79,6 +84,25 @@ h1,h2,h3{
   font-size: 2rem;  
 }
  
+/** Utilidades**/
+.w-sm-100{ /** en pequeno con su media qery hacia la derecha en 768px**/
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-sm-100{
+        width: auto;
+    }
+}
+
+.flex {
+display: flex;
+}
+
+.alinear-derecha {
+justify-content: flex-end;
+}
+
 /*Navegacion Principal*/
 .nav-bg {
     background-color: var(--secundario);
@@ -153,7 +177,7 @@ h1,h2,h3{
 }
 
 .servicio {
-    display: flex;
+    display: flex;    
     flex-direction: column;
     align-items: center;
 }
@@ -176,4 +200,58 @@ h1,h2,h3{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+/* contacto */
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem,100%); /**utilizar el valor mas pequeno**/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform:uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+@media (min-width: 768px) {
+    .contenedor campos {
+        display: grid;
+        grid-template-columns:repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }    
+}
+
+
+.campo {
+margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--blanco);
+    font-weight:bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.campo textarea {
+    height: 20rem;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
 }
