--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,17 @@
 html{
     font-size:62.5%;
     box-sizing: border-box; /*Hack para Box Model*/
+    scroll-snap-type: y mandatory;
 }
+
+/**scrool snap **/
+
+/* .servicios,
+.navegacion-principal
+.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop:always;
+} */
 
 *, *:before, *:after {
     box-sizing: inherit;
@@ -168,6 +178,8 @@ justify-content: flex-end;
     align-items:flex-end;
 }
 
+
+
 /*servicios*/
 @media (min-width:768px) {
     .servicios {
@@ -233,6 +245,10 @@ justify-content: flex-end;
     }    
 }
 
+.campo:nth-child(3),
+.campo:nth-child(4){
+    grid-column: 1/ 3;
+}
 
 .campo {
 margin-bottom: 1rem;
@@ -254,4 +270,9 @@ margin-bottom: 1rem;
     border: none;
     padding: 1.5rem;
     border-radius: .5rem;
+}
+
+/****/
+.footer {
+    text-align: center;
 }
