--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ text-align: center;
 border: none;
 }
 
-@media (min-width: 480px) {
+@media (min-width: 768px) {
     .boton {
         width: auto;
     }
@@ -65,8 +65,8 @@ border: none;
 
 .sombra{
     -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
-    -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
-    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    /* -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48); */
     background-color: var(--blanco);
     padding: 2rem;
     border-radius: 1rem;
@@ -106,11 +106,11 @@ h1,h2,h3{
 }
 
 .flex {
-display: flex;
+    display: flex;
 }
 
 .alinear-derecha {
-justify-content: flex-end;
+    justify-content: flex-end;
 }
 
 /*Navegacion Principal*/
@@ -173,7 +173,7 @@ justify-content: flex-end;
     color: var(--blanco);
 }
 
-.contenido-hero.ubicacion {
+.contenido-hero .ubicacion {
     display: flex;
     align-items:flex-end;
 }
@@ -181,10 +181,11 @@ justify-content: flex-end;
 
 
 /*servicios*/
-@media (min-width:768px) {
+@media (min-width: 768px) {
     .servicios {
         display: grid;
-        grid-template-columns: (3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
     }
 }
 
@@ -217,7 +218,7 @@ justify-content: flex-end;
 /* contacto */
 .formulario {
     background-color: var(--gris);
-    width: min(60rem,100%); /**utilizar el valor mas pequeno**/
+    width: min( 60rem,100% ); /**utilizar el valor mas pequeno**/
     margin: 0 auto;
     padding: 2rem;
     border-radius: 1rem;
@@ -237,9 +238,9 @@ justify-content: flex-end;
 }
 
 @media (min-width: 768px) {
-    .contenedor campos {
+    .contenedor-campos {
         display: grid;
-        grid-template-columns:repeat(2, 1fr);
+        grid-template-columns:50% 50%;
         grid-template-rows: auto auto 20rem;
         column-gap: 1rem;
     }    
