--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ h1,h2,h3{
 }
 /* hero */
 .hero {
-    background-image: url(/img/hero.jpg);
+    background-image: url(/img/workspace-2.webp);
     background-repeat: no-repeat;
     background-size: cover;
     height: 410px;    
