--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,8 @@ h1,h2,h3{
 
 .contenido-hero {
     position: absolute;
-    /* background-color: rgb(0, 0, 0, .7); /** Anterior **/         
-    /* xisraeluni.github.io/Freelancer/ */
+    background-color: rgb(0, 0, 0, .7); /** Anterior *         
+    background-color: rgb(0 0 0 / 70%); */
     width: 100%;
     height: 100%;
     display: flex;
