--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ border: none;
 }
 
 .sombra{
-    /* -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48); */
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48); 
     /* -moz-box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
     box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48); */
     background-color: var(--blanco);
